Procfile and heroku deploy

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -42,6 +42,12 @@
   },
   "SSFUsers": {
     "dataSource": "mongo",
-    "public": true
+    "public": true,
+    "options": {
+      "emailVerificationRequired": true
+    }
+  },
+  "Email" : {
+    "dataSource" : "emailConnector"
   }
 }
