--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
-    "jshint": "^2.5.6"
+    "jshint": "^2.5.6",
+    "mocha": "*",
+    "chai": "*",
+    "supertest": "*"
   },
   "repository": {
     "type": "",
